--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,17 @@
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.logo {
+  text-align: center;
+	max-width: 100px;
+	height: auto;
+	margin:auto;
+	display: inline;
+display:block;
+
+}
 #wrapper {
     width: 96%;
     max-width: 920px;
@@ -6,18 +20,18 @@
     }
 
     main {
-        width: 30%;
+        width: 28%;
         margin-right: 5%;
         margin-left: 5%;
         float: left;
         }
 
     aside_r {
-        width: 30%;
-        float: right;
+        width: 28%;
+        float: left;
         }
     aside_l{
-      width: 30%;
+      width: 28%;
       float: left;
     }
 
@@ -35,11 +49,15 @@ header h1 {
     background: url(sllogo.jpg) 0 0 no-repeat;
     text-indent: -9999px;
     }
+    .border {
+    	border: 1px black solid;
+      padding: 10px;
 
-
+    }
 header nav {
-    float: right;
-    margin-top: 40px;
+
+    text-align:center;
+    margin-top: 10px;
     }
 
     header nav li {
@@ -50,13 +68,29 @@ header nav ul li a {
     text-decoration:none;
         color:#333;}
 
-#banner {
+  #banner {
     float: left;
     margin-bottom: 15px;
     width: 100%;
     }
 
     #banner img {
-        width: 100%;
+        width: 80%;
         height: auto;
+        }
+        #footer {
+        	position: absolute;
+        	right: 0;
+        	bottom: 0;
+        	left: 0;
+        	padding: 1rem;
+        	height: 20px;
+        	background-color: #efefef;
+        	text-align: center;
+        	border-top: 2px;
+        	background-color: #EEEEEE;
+        	text-align: right;
+        	font-size: 1.2em;
+        	padding-right: 14%;
+        	color: #333;
         }
